--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,20 @@
-// Place all the styles related to the StaticPages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@font-face {
+    font-family: 'comfortaaregular';
+    src: asset-url('comfortaa_regular-webfont.eot', font);
+    src: asset-url('comfortaa_regular-webfont.eot?#iefix', font) format('embedded-opentype'),
+         asset-url('comfortaa_regular-webfont.woff', font) format('woff'),
+         asset-url('comfortaa_regular-webfont.ttf', font) format('truetype'),
+         asset-url('comfortaa_regular-webfont.svg#comfortaaregular', font) format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+h1, h2
+{
+  font-family: 'comfortaaregular', sans-serif;
+}
+
+p
+{
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
