Adds HTML for navbar on all pages.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,18 @@
 </head>
 <body>
 
+  <header id="nav-container">
+    <nav>
+      <ul>
+        <li class="nav-item" id="brand">Gaurav Jhaveri</li>
+        <li class="nav-item">Projects</li>
+        <li class="nav-item">Resume</li>
+        <li class="nav-item">Blog</li>
+      </ul>
+    </nav>
+  </header>
+        
+
 <%= yield %>
 
 </body>
