Adds styles to various elements.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,25 @@
  *= require_self
  *= require_tree .
  */
+
+nav ul
+{
+  padding: 10px;
+  list-style: none;
+}
+
+nav a
+{
+  text-decoration: none;
+}
+
+#brand
+{
+  float: left;
+}
+
+.nav-item
+{
+  padding: 0px 10px;
+  float: right;
+}
