--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,10 @@
   <header id="nav-container">
     <nav>
       <ul>
-        <li class="nav-item" id="brand">Gaurav Jhaveri</li>
-        <li class="nav-item">Projects</li>
-        <li class="nav-item">Resume</li>
-        <li class="nav-item">Blog</li>
+        <li class="nav-item" id="brand"><a href="#">Gaurav Jhaveri</a></li>
+        <li class="nav-item"><a href="#">Projects</a></li>
+        <li class="nav-item"><a href="#">Resume</a></li>
+        <li class="nav-item"><a href="#">Blog</a></li>
       </ul>
     </nav>
   </header>
