Adds profile-picture to homepage.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,7 @@
 <h1 id="name">Gaurav Jhaveri</h1>
 
+<img id="profile-picture" src="<%= asset_path('gaurav-jhaveri.jpg') %>">
+
 <h2>About</h2>
 
 <p>Hi, I'm Gaurav. I'm a computer engineering undergrad at the Vidyalankar Institute of Technology. I'm a web developer focused on writing clean, beautiful code and building things that can be used by thousands of people. I work in Ruby on Rails, Javascript, HTML and CSS.</p>
