--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -28,3 +28,12 @@ p, a
 {
   text-align:center;
 }
+
+#profile-picture
+{
+  margin: 50px 20px 50px 0px;
+  width:120px;
+  height:180px;
+  float:left;
+  border: 1px solid black;
+}
