--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,10 +6,10 @@
 
 <p>Hi, I'm Gaurav. I'm a computer engineering undergrad at the Vidyalankar Institute of Technology. I'm a web developer focused on writing clean, beautiful code and building things that can be used by thousands of people. I work in Ruby on Rails, Javascript, HTML and CSS.</p>
 
-<p>Some of the other things I'm interested in include online education and its impact on the existing system, e-sports and its viability as a profession & Star Wars.</p>
+<p>Some of the other things I'm interested in include online education and its impact on the existing system, e-sports and its viability as a profession & Star Wars. Shoot me a message, I'd love to hear from you!</p>
 
 <h2>Projects</h2>
 <p>Some of the cool things I've built!</p>
 
 <h2>Blog</h2>
-<p>A peek of what goes inside my mind.</p>
+<p>A peek of what goes inside my mind. I frequently write about the new things I learn while programming. I also express my opinion on various subjects that interest me. Come, <a href="/blog">read my blog!</a></p>
