Minor changes to navbar.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <header id="nav-container">
+  <header class="nav-container">
     <nav>
       <ul>
         <li class="nav-item" id="brand"><a href="<%= root_path %>">Gaurav Jhaveri</a></li>
