Minor changes homepage.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,26 @@
-<h1 id="name">Gaurav Jhaveri</h1>
+<div class="row">
+	<div class="small-12 text-center columns"><h1 id="name">Gaurav Jhaveri</h1></div>
+</div>
+<div class="row">
+    <div class="small-12 columns">
+      <h3>About</h3>
+      <img id="profile-picture" src="<%= asset_path('gaurav-jhaveri.jpg') %>" style="float:left;width:100px;margin-right:10px;">
+  		<p>Hi, I'm Gaurav. I'm a computer engineering undergrad at the Vidyalankar Institute of Technology. I'm a web developer focused on writing clean, beautiful code and building things that can be used by thousands of people. I work in Ruby on Rails, Javascript, HTML and CSS.</p>
 
-<img id="profile-picture" src="<%= asset_path('gaurav-jhaveri.jpg') %>">
+		<p>Some of the other things I'm interested in include online education and its impact on the existing system, e-sports and its viability as a profession & Star Wars. Shoot me a message, I'd love to hear from you!</p>
+    </div>
+  </div>
 
-<h2>About</h2>
-
-<p>Hi, I'm Gaurav. I'm a computer engineering undergrad at the Vidyalankar Institute of Technology. I'm a web developer focused on writing clean, beautiful code and building things that can be used by thousands of people. I work in Ruby on Rails, Javascript, HTML and CSS.</p>
-
-<p>Some of the other things I'm interested in include online education and its impact on the existing system, e-sports and its viability as a profession & Star Wars. Shoot me a message, I'd love to hear from you!</p>
-
-<h2>Projects</h2>
-<p>Some of the cool things I've built!</p>
-
-<h2>Blog</h2>
-<p>A peek of what goes inside my mind. I frequently write about the new things I learn while programming. I also express my opinion on various subjects that interest me. Come, <a href="/blog">read my blog!</a></p>
+<div class="row">
+  <div class="small-12 columns">
+		<h3>Projects</h3>
+		<p>Some of the cool things I've built!</p>
+  </div>
+</div>
+    
+<div class="row">
+  <div class="small-12 columns">
+		<h3>Blog</h3>
+		<p>A peek of what goes inside my mind. I frequently write about the new things I learn while programming. I also express my opinion on various subjects that interest me. Come, <a href="/blog">read my blog!</a></p>
+  </div>
+</div>
