--- a/config/jekyll/_layouts/default.html
+++ b/config/jekyll/_layouts/default.html
@@ -25,7 +25,7 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/blogger">Gaurav Jhaveri</a>
+    <a href="/">Gaurav Jhaveri</a>
   </div>
   
   {{ content }}
