--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
             <li class="divider"></li>
             <li><%= link_to "Blog", "/blog" %></li>
             <li class="divider"></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="<%= page_path(id: 'projects') %>">Projects</a></li>
             <li class="divider"></li>
           </ul>
         </section>
