Removes 'Projects' sub-heading.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<div class="container" style="height:100%">
 <div class="row">
 	<div class="small-12 text-center columns"><h1 id="name">Gaurav Jhaveri</h1></div>
 </div>
@@ -10,17 +11,11 @@
 		<p>Some of the other things I'm interested in include online education and its impact on the existing system, e-sports and its viability as a profession & Star Wars. Shoot me a message, I'd love to hear from you!</p>
     </div>
   </div>
-
-<div class="row">
-  <div class="small-12 columns">
-		<h3>Projects</h3>
-		<p>Some of the cool things I've built!</p>
-  </div>
-</div>
     
 <div class="row">
   <div class="small-12 columns">
 		<h3>Blog</h3>
 		<p>A peek of what goes inside my mind. I frequently write about the new things I learn while programming. I also express my opinion on various subjects that interest me. Come, <a href="/blog">read my blog!</a></p>
   </div>
+</div>
 </div>
