Adds Facebook Summer of Hack project.

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,23 +1,31 @@
-
-
 <div class="row">
 	<div class="small-12 text-center columns"><h1 id="title">Projects</h1></div>
 </div>
 
 <div class="row">
   <div class="small-12 columns">
+    <h3>Shuffle App</h3>
+    Chatroulette for music. Made during the <%= link_to "Facebook Summer of Hack 2013", "https://www.facebook.com/events/647851678576439/" %>.
+    <p><a href="https://github.com/garetht/shuffle-app"><i class="fi-social-github" style="font-size:40px"></i> shuffle-app</a></p>
+    <a class="th" href="http://i.imgur.com/TQrnEEz.jpg">
+      <img src="http://i.imgur.com/TQrnEEz.jpg" width="300px">
+    </a>
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="small-12 columns">
     <h3>Dota Nexus</h3>
     <p>A team management web app for the game Dota 2 with a focus on stats. It uses Resque to continuously fetch data from the Dota 2 Web API.</p>
-    <p>Role: Sole Developer</p>
     <a href="https://github.com/Mutinix/dota2stats"><p><i class="fi-social-github" style="font-size:40px"></i> dota2stats</p></a>
   </div>
 </div>
-
+<hr>
 <div class="row">
   <div class="small-12 columns">
     <h3>Geeg.ee</h3>
     <p>A professional network aimed at connecting various people in eSports. Its primary objective is to connect rising players and casters to organizations and foster growth in eSports.</p>
-    <p>Role: Lead Back-end Developer</p>
+    Role: Back-End Developer<br>
     <a href="https://github.com/HubridNoxx/geeg.ee"><p><i class="fi-social-github" style="font-size:40px"></i> geeg.ee</p></a>
     <a class="th" href="http://i.imgur.com/nqsesye.png">
       <img src="http://i.imgur.com/nqsesye.png" width="300px">
