Changes footer to contact bar.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,15 @@
 <div class="row">
 	<div class="small-12 text-center columns"><h1 id="name">Gaurav Jhaveri</h1></div>
 </div>
+
+<div class="row contact-bar">
+  <div class="small-12 columns">
+		<i class="fi-mail"></i> <%= mail_to "jhaveri.gaurav@gmail.com" %>
+    <i class="fi-social-github"></i> <%= link_to "Mutinix", "https://github.com/Mutinix" %>
+    <i class="fi-social-twitter"></i> <%= link_to "gaurav_jhaveri", "https://twitter.com/gaurav_jhaveri" %>
+  </div>
+</div>
+
 <div class="row">
     <div class="small-12 columns">
       <h3>About</h3>
