--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,17 +20,20 @@ body, html
   height: 100%;
 }
 
-footer
+.contact-bar
 {
   clear: both;
-  background: black;
-  color: White;
   padding: 0;
   text-align: center;
   vertical-align: middle;
   line-height: normal;
-  margin-top: 10px;
+  margin: 0px;
   padding: 25px;
   bottom: 0px;
   width: 100%;
+}
+
+.contact-bar i
+{
+  padding-left: 20px;
 }
