Minor changes to Shuffle App project description.

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -7,6 +7,9 @@
     <h3>Shuffle App</h3>
     Chatroulette for music. Made during the <%= link_to "Facebook Summer of Hack 2013", "https://www.facebook.com/events/647851678576439/" %>.
     <p><a href="https://github.com/garetht/shuffle-app"><i class="fi-social-github" style="font-size:40px"></i> shuffle-app</a></p>
+    <a class="th" href="http://i.imgur.com/hodPPE2.jpg">
+      <img src="http://i.imgur.com/hodPPE2.jpg" width="300px">
+    </a>
     <a class="th" href="http://i.imgur.com/TQrnEEz.jpg">
       <img src="http://i.imgur.com/TQrnEEz.jpg" width="300px">
     </a>
