Adds Snake to projects list.

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="small-12 columns">
     <h3>Shuffle App</h3>
-    Chatroulette for music. Made during the <%= link_to "Facebook Summer of Hack 2013", "https://www.facebook.com/events/647851678576439/" %>.
+    <p>Chatroulette for music. Made during the <%= link_to "Facebook Summer of Hack 2013", "https://www.facebook.com/events/647851678576439/" %>.</p>
     <p><a href="https://github.com/garetht/shuffle-app"><i class="fi-social-github" style="font-size:40px"></i> shuffle-app</a></p>
     <a class="th" href="http://i.imgur.com/hodPPE2.jpg">
       <img src="http://i.imgur.com/hodPPE2.jpg" width="300px">
@@ -16,25 +16,39 @@
   </div>
 </div>
 <hr>
-<div class="row">
-  <div class="small-12 columns">
-    <h3>Dota Nexus</h3>
-    <p>A team management web app for the game Dota 2 with a focus on stats. It uses Resque to continuously fetch data from the Dota 2 Web API.</p>
-    <a href="https://github.com/Mutinix/dota2stats"><p><i class="fi-social-github" style="font-size:40px"></i> dota2stats</p></a>
-  </div>
-</div>
-<hr>
+
 <div class="row">
   <div class="small-12 columns">
     <h3>Geeg.ee</h3>
     <p>A professional network aimed at connecting various people in eSports. Its primary objective is to connect rising players and casters to organizations and foster growth in eSports.</p>
     Role: Back-End Developer<br>
-    <a href="https://github.com/HubridNoxx/geeg.ee"><p><i class="fi-social-github" style="font-size:40px"></i> geeg.ee</p></a>
+    <p><a href="https://github.com/HubridNoxx/geeg.ee"><i class="fi-social-github" style="font-size:40px"></i> geeg.ee</a></p>
     <a class="th" href="http://i.imgur.com/nqsesye.png">
       <img src="http://i.imgur.com/nqsesye.png" width="300px">
     </a>
     <a class="th" href="http://i.imgur.com/80Dxyyi.png">
       <img src="http://i.imgur.com/80Dxyyi.png" width="300px">
     </a>
+  </div>
+</div>
+<hr>
+
+<div class="row">
+  <div class="small-12 columns">
+    <h3>Snake</h3>
+    <p>A simple game of snake created live during a workshop to introduce students to HTML5 and Javascript. <a href=<%= page_path(id: 'snake') %>>Play Now!</a></p>
+    <p><a href="https://github.com/Mutinix/html-demos/blob/master/Canvas/Snake/index.html"><i class="fi-social-github" style="font-size:40px"></i> Snake</a></p>
+    <a class="th" href="http://i.imgur.com/0BwJRCk.png">
+      <img src="http://i.imgur.com/0BwJRCk.png" width="300px">
+    </a>
+  </div>
+</div>
+<hr>
+
+<div class="row">
+  <div class="small-12 columns">
+    <h3>Dota Nexus</h3>
+    <p>A team management web app for the game Dota 2 with a focus on stats. It uses Resque to continuously fetch data from the Dota 2 Web API.</p>
+    <a href="https://github.com/Mutinix/dota2stats"><i class="fi-social-github" style="font-size:40px"></i> dota2stats</a>
   </div>
 </div>
