Adds Bouncy Box to project list.

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -35,6 +35,15 @@
 
 <div class="row">
   <div class="small-12 columns">
+    <h3>Bouncy Box</h3>
+    <p>A Flappy Bird clone created using Phaser. <a href=<%= page_path(id: 'bouncybox') %>>Play Now!</a></p>
+    <p><a href="https://github.com/Mutinix/BouncyBox"><i class="fi-social-github" style="font-size:40px"></i> BouncyBox</a></p>
+  </div>
+</div>
+<hr>
+
+<div class="row">
+  <div class="small-12 columns">
     <h3>Snake</h3>
     <p>A simple game of snake created live during a workshop to introduce students to HTML5 and Javascript. <a href=<%= page_path(id: 'snake') %>>Play Now!</a></p>
     <p><a href="https://github.com/Mutinix/html-demos/blob/master/Canvas/Snake/index.html"><i class="fi-social-github" style="font-size:40px"></i> Snake</a></p>
