--- a/app/views/pages/bouncybox.html.erb
+++ b/app/views/pages/bouncybox.html.erb
@@ -2,7 +2,7 @@
   <h1 style="font-family: Helvetica">Bouncy Box</h1>
   <%= javascript_include_tag 'http://cdnjs.cloudflare.com/ajax/libs/phaser/2.0.5/phaser.min.js' %>
   <%= javascript_include_tag 'bouncybox/main' %>
-  <p>Press Space to jump</p>
+  <p>Click/Tap/Press Space to jump</p>
   <div id="gameDiv"></div>
   <br><br>
 </center>
