--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
   <body>
 
     <div class="contain-to-grid">
-      <nav class="top-bar" data-topbar>
+      <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
           <li class="name">
             <h1><%= link_to "Home", "/" %></h1>
