--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,26 +5,27 @@
 <!--[if IE 8 ]>    <html class="ie8" lang="en"> <![endif]-->
 <!--[if IE 9 ]>    <html class="ie9" lang="en"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
+<html lang="en">
   <head>
-  	<meta charset="utf-8" />
-
+    <meta charset="utf-8" />
+    
   	<!-- Uncomment to make IE8 render like IE7 -->
   	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
+    
+    <!-- Set the viewport width to device width for mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  	<!-- Set the viewport width to device width for mobile -->
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><%= content_for?(:title) ? yield(:title) : "Gaurav Jhaveri" %></title>
 
-  	<title><%= content_for?(:title) ? yield(:title) : "Gaurav Jhaveri" %></title>
-
-  	<%= stylesheet_link_tag    "application" %>
-  	<%= javascript_include_tag "vendor/custom.modernizr" %>
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "vendor/modernizr" %>
     <%= csrf_meta_tags %>
   </head>
 
   <body>
-
+    
     <div class="contain-to-grid">
-      <nav class="top-bar" data-topbar role="navigation">
+      <nav class="top-bar" data-topbar role="navigation" aria-hidden="true">
         <ul class="title-area">
           <li class="name">
             <h1><%= link_to "Home", "/" %></h1>
@@ -43,9 +44,8 @@
         </section>
       </nav>
     </div>
-    
-    <%= javascript_include_tag "application" %>
-    
+
     <%= yield %>
+    <%= javascript_include_tag "application" %>
   </body>
 </html>
