--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,5 +47,9 @@
 
     <%= yield %>
     <%= javascript_include_tag "application" %>
+    
+    <script>
+      $(document).foundation();
+    </script>
   </body>
 </html>
